; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_privacy.c_btm_ble_exe_enable_resolving_list.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_privacy.c_btm_ble_exe_enable_resolving_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_ble_exe_enable_resolving_list() #0 {
  %1 = call i32 (...) @btm_ble_suspend_resolving_list_activity()
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %16

4:                                                ; preds = %0
  %5 = call %struct.TYPE_2__* (...) @controller_get_interface()
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (...)*, i32 (...)** %6, align 8
  %8 = call i32 (...) %7()
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %4
  %11 = load i32, i32* @TRUE, align 4
  %12 = call i32 @btm_ble_vendor_enable_irk_feature(i32 %11)
  br label %16

13:                                               ; preds = %4
  %14 = load i32, i32* @TRUE, align 4
  %15 = call i32 @btsnd_hcic_ble_set_addr_resolution_enable(i32 %14)
  br label %16

16:                                               ; preds = %3, %13, %10
  ret void
}

declare dso_local i32 @btm_ble_suspend_resolving_list_activity(...) #1

declare dso_local %struct.TYPE_2__* @controller_get_interface(...) #1

declare dso_local i32 @btm_ble_vendor_enable_irk_feature(i32) #1

declare dso_local i32 @btsnd_hcic_ble_set_addr_resolution_enable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
